# FaceExtractor

./: .gitignore  CMakeLists.txt  LICENSE  conanfile.txt  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  readme.md
src/: main.cpp  mainwindow.cpp  mainwindow.h
